# HardwareMasquerade

./: CMakeLists.txt  Makefile  README.md  build-ci.bat  build-ci.ps1  build.bat  build.ps1  build.py  build_driver.bat  build_simple.ps1  check_environment.bat  install_driver.bat  requirements.txt
.github/: build.yml
.github/workflows/: build.yml
common/: ioctl_codes.h
driver/: HardwareSpoofer.c  HardwareSpoofer.h  HardwareSpoofer.inf
driver_loader/: loader.c  loader.h
gui/: main.py  resources.py
service/: service.c  service.h
src/: main.py
